# seshat

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  README.md  do_compile.sh  do_compile_3ds.sh  do_compile_cli.sh  do_compile_inner.sh  do_compile_sdl.sh  do_format.sh  featureson.cc  gparser.cc  gparser.h  grammar.cc  grammar.h  hypothesis.cc  hypothesis.h  logspace.cc  logspace.h  meparser.cc  meparser.h  online.cc  online.h  production.cc  sample.cc  sample.h  segmentation.cc  seshat.cc  seshat.code-workspace  sparel.cc  sparel.h  stroke.cc  stroke.h  symfeatures.cc  symfeatures.h  symrec.cc  symrec.h  vectorimage.h
Config/Grammar/: mathexp.gram
examples/math_input_3ds/: CMakeLists.txt
examples/math_input_cli/: CMakeLists.txt
examples/math_input_cli/source/: main.cpp
examples/math_input_sdl/: CMakeLists.txt
math_input/: CMakeLists.txt
math_input/source/: main.cpp
math_input_3ds/source/: main.cpp
math_input_cli/source/: main.cpp
math_input_sdl/: CMakeLists.txt
math_input_sdl/source/: main.cpp
rnnlib4seshat/: ActivationFunctions.hpp  CMakeLists.txt  ClassificationLayer.hpp  CollapseLayer.hpp  ConfigFile.hpp  Container.hpp  DataExporter.hpp  DataSequence.hpp  FullConnection.hpp  Helpers.hpp  Layer.hpp  LstmLayer.hpp  Matrix.hpp  Mdrnn.hpp  MultiArray.hpp  MultilayerNet.hpp  NetcdfDataset.hpp  NeuronLayer.hpp  Random.cpp  Random.hpp  SeqBuffer.hpp  SoftmaxLayer.hpp  String.hpp  Trainer.hpp  WeightContainer.cpp  WeightContainer.hpp
rnnlib4seshat/include/rnnlib4seshat/: ActivationFunctions.hpp  BiasLayer.hpp  BlockLayer.hpp  CollapseLayer.hpp  ConfigFile.hpp  Connection.hpp  Container.hpp  DataExporter.hpp  DataSequence.hpp  FullConnection.hpp  Helpers.hpp  IdentityLayer.hpp  Layer.hpp  Matrix.hpp  Mdrnn.hpp  MultiArray.hpp  MultilayerNet.hpp  Named.hpp  NeuronLayer.hpp  Optimiser.hpp  Rprop.hpp  SeqBuffer.hpp  SoftmaxLayer.hpp  SteepestDescent.hpp  String.hpp  Trainer.hpp  WeightContainer.hpp
rnnlib4seshat/public/rnnlib4seshat/: ClassificationLayer.hpp  ConfigFile.hpp  CopyConnection.hpp  DataExporter.hpp  GatherLayer.hpp  Helpers.hpp  InputLayer.hpp  Layer.hpp  Log.hpp  LstmLayer.hpp  Matrix.hpp  MultiArray.hpp  MultilayerNet.hpp  NetcdfDataset.hpp  NetworkOutput.hpp  Random.hpp  RealType.hpp  SteepestDescent.hpp
rnnlib4seshat/source/: ClassificationLayer.cpp  DataExporter.cpp  Layer.cpp  Mdrnn.cpp  Optimiser.cpp  Random.cpp  WeightContainer.cpp
seshat/: CMakeLists.txt
seshat/include/: cellcyk.hpp  duration.hpp  featureson.hpp  gmm.hpp  gparser.hpp  grammar.hpp  hypothesis.hpp  internal_hypothesis.hpp  logspace.hpp  meparser.hpp  online.hpp  path.hpp  production.hpp  sample.hpp  samples.hpp  segmentation.hpp  sparel.hpp  stroke.hpp  symfeatures.hpp  symrec.hpp  tablecyk.hpp  vectorimage.hpp
seshat/public/seshat/: hypothesis.hpp  point.hpp  seshat.hpp
seshat/source/: cellcyk.cpp  duration.cpp  featureson.cpp  gmm.cpp  gparser.cpp  grammar.cpp  hypothesis.cpp  internal_hypothesis.cpp  logspace.cpp  main.cpp  meparser.cpp  online.cpp  production.cpp  sample.cpp  samples.cpp  segmentation.cpp  seshat.cpp  sparel.cpp  stroke.cpp  symfeatures.cpp  symrec.cpp  tablecyk.cpp
